Hands-on lab/lab-files/ARM/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "uniqueSuffix": {
            "type": "string",
            "metadata": {
                "description": "Suffix added to all resource names to make them unique."
            }
        },
        "VMPassword": {
            "type": "SecureString",
            "metadata": {
                "description": "The password for demouser in the Lab VM, SQL Server 2019 VM, and SQL Server 2008 R2 VM."
            }
        }
    },
    "functions": [],
    "variables": {
        "LabVMName": "LabVM",
        "LabVMStorageName": "[toLower(concat(variables('LabVMName'), 'storage', toLower(parameters('uniqueSuffix'))))]",
        "LabVMPublicIPName": "[concat(variables('LabVMName'), '-PublicIP-', parameters('uniqueSuffix'))]",
        "LabVMNSGName": "[concat(variables('LabVMName'), '-nsg-', parameters('uniqueSuffix'))]",
        "LabVMVirtualNetworkName": "[concat(variables('LabVMName'), '-VirtualNetwork-', parameters('uniqueSuffix'))]",
        "LabVMSubnetName": "[concat(variables('LabVMName'), '-Subnet-', parameters('uniqueSuffix'))]",
        "LabVMNetworkInterfaceName": "[concat(variables('LabVMName'), '-NetworkInterface-', parameters('uniqueSuffix'))]",
        "VMUsername": "demouser",
        "LabVMDiskName": "[concat(variables('LabVMName'), '-OsDisk-', parameters('uniqueSuffix'))]",

        "SqlServerVMName": "SqlServer2019",
        "SqlServerPublicIPName": "[concat(variables('SqlServerVMName'), '-PublicIP-', parameters('uniqueSuffix'))]",
        "SqlServerNSGName": "[concat(variables('SqlServerVMName'), '-nsg-', parameters('uniqueSuffix'))]",
        "SqlServerNetworkInterfaceName": "[concat(variables('SqlServerVMName'), '-NetworkInterface-', parameters('uniqueSuffix'))]",
        "SqlServerSubnetName": "[concat(variables('SqlServerVMName'), '-Subnet-', parameters('uniqueSuffix'))]",

        "dataDisks": {
            "createOption": "empty",
            "caching": "ReadOnly",
            "writeAcceleratorEnabled": false,
            "storageAccountType": "Premium_LRS",
            "diskSizeGB": 1023
        }
    },
    "resources": [
        {
            "name": "[variables('LabVMStorageName')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2019-06-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "[concat(variables('LabVMStorageName'), ' Storage Account')]"
            },
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage"
        },
        {
            "name": "[variables('LabVMPublicIPName')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "[concat(variables('LabVMPublicIPName'), ' PublicIPAddress')]"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            }
        },
        {
            "name": "[variables('LabVMNSGName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "Allows RDP traffic.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('LabVMVirtualNetworkName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('LabVMNSGName'))]"
            ],
            "tags": {
                "displayName": "[variables('LabVMVirtualNetworkName')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('LabVMSubnetName')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('LabVMNSGName'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('SqlServerSubnetName')]",
                        "properties": {
                            "addressPrefix": "10.0.1.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('SqlServerNSGName'))]" 
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('LabVMNetworkInterfaceName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variableS('LabVMPublicIPName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('LabVMVirtualNetworkName'))]"
            ],
            "tags": {
                "displayName": "[concat(variables('LabVMName'), ' Network Interface')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "DynamicIP",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('LabVMPublicIPName'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('LabVMVirtualNetworkName'), variables('LabVMSubnetName'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('LabVMName')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('LabVMStorageName'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('LabVMNetworkInterfaceName'))]"
            ],
            "tags": {
                "displayName": "[variables('LabVMName')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "osProfile": {
                    "computerName": "[variables('LabVMName')]",
                    "adminUsername": "[variables('VMUsername')]",
                    "adminPassword": "[parameters('VMPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftVisualStudio",
                        "offer": "visualstudio2019latest",
                        "sku": "vs-2019-comm-latest-ws2019",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[variables('LabVMDiskName')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('LabVMNetworkInterfaceName'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('LabVMStorageName'))).primaryEndpoints.blob]"
                    }
                }
            }
        },

        {
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "2020-06-01",
            "name": "[variables('SqlServerPublicIPName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIpAllocationMethod": "Dynamic"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-06-01",
            "name": "[variables('SqlServerNSGName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "Allows RDP traffic.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SqlServer",
                        "properties": {
                            "description": "Allows SQL Server traffic.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-06-01",
            "name": "[variables('SqlServerNetworkInterfaceName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('SqlServerNSGName'))]",
                "[resourceId('Microsoft.Network/publicIpAddresses/', variables('SqlServerPublicIPName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "DynamicIP",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('LabVMVirtualNetworkName'), variables('SqlServerSubnetName'))]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('SqlServerPublicIPName'))]"
                            }
                        }
                    }
                ],
                "enableAcceleratedNetworking": true,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('SqlServerNSGName'))]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2020-06-01",
            "name": "[variables('SqlServerVMName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces/', variables('SqlServerNetworkInterfaceName'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "storageProfile": {
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        }
                    },
                    "imageReference": {
                        "publisher": "MicrosoftSQLServer",
                        "offer": "sql2019-ws2019",
                        "sku": "SQLDEV",
                        "version": "latest"
                    },
                    "copy": [
                        {
                            "name": "dataDisks",
                            "count": 2,
                            "input": {
                                "lun": "[copyIndex('dataDisks')]",
                                "createOption": "[variables('dataDisks').createOption]",
                                "caching": "[if(greaterOrEquals(copyIndex('dataDisks'), 1) ,'None', variables('dataDisks').caching )]",
                                "writeAcceleratorEnabled": "[variables('dataDisks').writeAcceleratorEnabled]",
                                "diskSizeGB": "[variables('dataDisks').diskSizeGB]",
                                "managedDisk": {
                                    "storageAccountType": "[variables('dataDisks').storageAccountType]"
                                }
                            }
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('SqlServerNetworkInterfaceName'))]"
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[variables('SqlServerVMName')]",
                    "adminUsername": "[variables('VMUsername')]",
                    "adminPassword": "[parameters('VMPassword')]",
                    "windowsConfiguration": {
                        "enableAutomaticUpdates": true,
                        "provisionVmAgent": true
                    }
                }
            }
        },
        {
            "type": "Microsoft.SqlVirtualMachine/SqlVirtualMachines",
            "apiVersion": "2017-03-01-preview",
            "name": "[variables('SqlServerVMName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', variables('SqlServerVMName'))]"
            ],
            "properties": {
                "virtualMachineResourceId": "[resourceId('Microsoft.Compute/virtualMachines', variables('SqlServerVMName'))]",
                "sqlManagement": "Full",
                "SqlServerLicenseType": "PAYG",
                "StorageConfigurationSettings": {
                    "DiskConfigurationType": "NEW",
                    "StorageWorkloadType": "General",
                    "SQLDataSettings": {
                        "LUNs": [0],
                        "DefaultFilePath": "F:\\SQLData"
                    },
                    "SQLLogSettings": {
                        "Luns": [1],
                        "DefaultFilePath": "G:\\SQLLog"
                    },
                    "SQLTempDbSettings": {
                        "DefaultFilePath": "D:\\SQLTemp"
                    }
                },
                "serverConfigurationsManagementSettings": {
                    "sqlConnectivityUpdateSettings": {
                        "connectivityType": "PUBLIC",
                        "port": 1433
                    }
                }
            }
        }
    ],
    "outputs": {}
}
